--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </div>
         </main>
         <div class="secundaria">
-            <div class="projeto"><p>Coming Soon</p></div>
-            <div class="projeto"><p>Coming Soon</p></div>
-            <div class="projeto"><p>Coming Soon</p></div>
+            <div class="projeto"><p>&emsp;Coming Soon&emsp;</p></div>
+            <div class="projeto"><p>&emsp;Coming Soon&emsp;</p></div>
+            <div class="projeto"><p>&emsp;Coming Soon&emsp;</p></div>
         </div>
     </div>
 
