--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button>Começando</button>
             </ul>
             <div class="menu-icon">
-                
+                <img src="imagens/menu.png" alt="">
             </div>
         </nav>
         <!-- end nav -->
@@ -41,9 +41,9 @@
                 </div>
 
                 <div class="medias-socias">
-                    <a> <i class="fa fa-linkedin"></i> </a>                    
-                    <a href="#"> <i class="fa fa-github"></i> </a>                    
-                    <a href="#"> <i class="fa fa-whatsapp"></i> </a>
+                    <a href="https://www.linkedin.com/in/leticia-bomfim-328b53193/" target="_blank"> <i class="fa fa-linkedin" ></i> </a>                    
+                    <a href="https://github.com/LeticiaBomfim33" target="_blank"> <i class="fa fa-github"></i> </a>                    
+                    <a href="https://wa.me/5511953247831"> <i class="fa fa-whatsapp"></i> </a>
 
                 </div>
             </div>
@@ -81,5 +81,6 @@
 
     <script src="script.js"></script>
     <script src="rolar.js"></script>
+    
 </body>
 </html>
