--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- end nav -->
         <main>
             <div class="text-bx">
-                <h1 id="go"> Letícia Bomfim </h1>
+                <h1 id="title"> Letícia Bomfim </h1>
                 <h2><b>Front-End developer </b></h2>
                 
                 
